# gmailchecker

./: LICENSE  Pipfile  README.md  gmailchecker.py  mypy.ini  pyproject.toml
.github/workflows/: main.yml
