[tool.poetry]
name = "gmailchecker"
version = "0.1.0"
description = ""
authors = ["Walter Moreira <walter@waltermoreira.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
ipython = "^7.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
